[package]
name = "apecoin-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
tokio = { version = "1.0.1", features = ["full"] }
gumdrop = "0.8.0"
ethers = "0.17.0"
ethers-flashbots = "0.10.0"
anyhow = "1.0.32"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde_json = "1.0.87"